--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "wdio-chromedriver-service": "^6.0.3"
   },
   "dependencies": {
+    "babel": "^6.23.0",
     "npm-check-updates": "^7.0.1"
   }
 }
