--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "babel": "^6.23.0",
     "faker": "^4.1.0",
+    "geckodriver": "^1.19.1",
     "npm-check-updates": "^7.0.1"
   }
 }
