--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@wdio/cli": "^6.1.17",
     "@wdio/local-runner": "^6.1.17",
     "@wdio/mocha-framework": "^6.1.17",
+    "@wdio/selenium-standalone-service": "^6.1.14",
     "@wdio/spec-reporter": "^6.1.14",
     "@wdio/sync": "^6.1.14",
     "allure-commandline": "^2.13.0",
